# proactive-voice-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.sh  pyproject.toml
app/: constants.py  functions.py  llm.py  main.py  schema.py
scripts/: demo.py
